language/move-lang/tests/move_check/parser/extra_text_after_main.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/extra_text_after_main.move:6:1
  │
6 │ fun foo() {
  │ ^^^ Unexpected characters after end of 'script' function

